2011-11-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tga.c (ReadTGAImage): Fix for poor TGA reading
	performance due to excessive use of GetBlobByte().  Performance is
	fixed by adding local buffering.  Fixes SourceForge bug 3439531
	"Slow TGA reading".

2011-11-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (AdaptiveThresholdImage): More performance
	improvements.

2011-11-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/analyze.c (GetImageBoundingBox): Add a special case to
	handle absolute color comparison.

2011-11-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* png: Update libpng to 1.5.6 release.

2011-10-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Avoid linker warnings when building GraphicsMagick
	regarding OpenMP library being included multiple times.

2011-10-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/meta.c (GetIPTCStream): Eliminate possible use of
	uninitialized data when parsing long format tag length.

2011-10-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/import.c: Move low-level pixel import functions from
	constitute.c to new file import.c.

	* magick/export.c: Move low-level pixel export functions from
	constitute.c to new file export.c.

	* magick/floats.c: Move Richard Nolde's floating point conversion
	functions from constitute.c to new file floats.c.

2011-10-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* libtool: Updated to libtool 2.4.2.

	* configure.ac: Automake conditional for HasPNG can not itself be
	conditional.  Indent PNG script code appropriately.

2011-10-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am (AUTOMAKE_OPTIONS): Distribute lzma-compressed
	tarball in 'xz' format rather than deprecated 'lzma' format.

2011-10-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Fix syntax error with GSCMYKDevice ('==' rather