@@ -34,6 +34,7 @@ PACKAGE_CHANGE_DATE=`awk '/^[0-9][0-9][0-9][0-9]-[0-9][0-9]-[0-9][0-9]/ { print 
 if test "$PACKAGE_RELEASE_DATE" = "unreleased"
 then
   PACKAGE_VERSION_ADDENDUM=".0${PACKAGE_CHANGE_DATE}"
+  PACKAGE_RELEASE_DATE="snapshot-${PACKAGE_CHANGE_DATE}"
 else
   PACKAGE_VERSION_ADDENDUM=''
 fi
