@@ -36,6 +36,14 @@
 <div class="document">
 
 
+<p>2011-11-25  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>version.sh: For snapshots packages, PACKAGE_CHANGE_DATE now uses
+a form like &quot;snapshot-20111121&quot; rather than &quot;unreleased&quot; so it is
+possible to determine the vintage of an installed snapshot.</li>
+</ul>
+</blockquote>
 <p>2011-11-21  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
