@@ -1,3 +1,9 @@
+2011-11-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* version.sh: For snapshots packages, PACKAGE_CHANGE_DATE now uses
+	a form like "snapshot-20111121" rather than "unreleased" so it is
+	possible to determine the vintage of an installed snapshot.
+
 2011-11-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/tga.c (ReadTGAImage): Fix for poor TGA reading
